--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "app-hello",
+  "name": "backend-notes",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon",
-    "production": "pm2 start src/index.js --app-hello"
+    "production": "pm2 start src/index.js --app-backend-notes"
   },
   "author": "",
   "license": "ISC",
