--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.14.0",
     "express-query-int": "^1.0.1",
+    "google-auth-library": "^8.1.0",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^6.1.7",
